crates/tmark-writers/tests/snapshots/fixtures__caption-table@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<table id="tbl:stock">
<caption>Stock.</caption>
<thead>
<tr>
<th>A</th>
<th>B</th>
</tr>
</thead>
<tbody>
<tr>
<td>1</td>
<td>2</td>
</tr>
</tbody>
</table>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
