crates/tmark-writers/tests/snapshots/fixtures__container-admonition@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<div class="admonition warning">
<p class="admonition-title">LaTeX toolchain</p>
<p>Install TeX Live before <code>texsmith --build</code>.</p>
</div>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
