crates/tmark-writers/tests/snapshots/fixtures__container-admonition@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tscallout}[kind=warning, title={\LaTeX{} toolchain}]
Install \TeX{} Live before \tscodeinline{texsmith -\allowbreak{}-\allowbreak{}build}.
\end{tscallout}

---requires---
{
  "packages": [
    "fvextra",
    "tcolorbox",
    "xcolor"
  ],
  "fragments": [
    "ts-callouts",
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
