crates/tmark-writers/tests/snapshots/fixtures__container-admonition@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#ts-callout(kind: "warning", title: [LaTeX toolchain])[
Install TeX Live before `texsmith --build`.
]

---requires---
{
  "packages": [],
  "fragments": [
    "ts-callouts"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
