crates/tmark-writers/tests/snapshots/fixtures__container-div-markdown@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tsdiv}{div}[class={grid,cards}]
Some \textbf{bold} inside.
\end{tsdiv}

---requires---
{
  "packages": [],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
