crates/tmark-writers/tests/snapshots/fixtures__container-dotted@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\leavevmode\phantomsection\label{fw:boot}FW-01 A finding.

\begin{tsdiv}{texsmith.core.counters}
\begin{tscode}
options:
  show_source: false
\end{tscode}

Prose after the directive still refers to \hyperref[fw:boot]{FW-01}.
\end{tsdiv}

---requires---
{
  "packages": [
    "epigraph",
    "fvextra",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "tcolorbox",
    "xcolor"
  ],
  "fragments": [
    "ts-code",
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": [
    "fw"
  ]
}
