crates/tmark-writers/tests/snapshots/fixtures__container-dotted@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
FW-01<fw:boot> A finding.

#ts-div("texsmith.core.counters")[
```
options:
  show_source: false
```

Prose after the directive still refers to #link(<fw:boot>)[FW-01].
]

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": [
    "fw"
  ]
}
